# Vulkan-Triangles

./: .env  CMakeLists.txt  LICENSE  Makefile  README.md  app  compiler.sh  main.cpp
geometry/src/: double_numbers.cpp  point.cpp
inc/: app.hpp  camera.hpp  coordinates.hpp  device.hpp  double_numbers.hpp  keyboard.hpp  line.hpp  model.hpp  object.hpp  octree.hpp  pipeline.hpp  point.hpp  render.hpp  render_system.hpp  swap_chain.hpp  triangle.hpp  vector.hpp  window.hpp
inc/geometry/: intersection.hpp  plane.hpp
inc/vulkan/: camera.hpp  device.hpp
shaders/: shader.frag  shader.vert  simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
src/: CMakeLists.txt  app.cpp  camera.cpp  device.cpp  keyboard.cpp  main.cpp  model.cpp  octree.cpp  pipeline.cpp  plane.cpp  render.cpp  render_system.cpp  swap_chain.cpp  triangle.cpp  vector.cpp  window.cpp
src/geometry/: intersection.cpp  line.cpp
src/vulkan/: camera.cpp  swap_chain.cpp
tests/: CMakeLists.txt
tests/ete/: CMakeLists.txt
tests/unit/: CMakeLists.txt  unit.cpp
vulkan/inc/: app.hpp  camera.hpp  descriptor.hpp  device.hpp  keyboard.hpp  model.hpp  object.hpp  pipeline.hpp  render.hpp  render_system.hpp  swap_chain.hpp  uniform_buffer.hpp  window.hpp
vulkan/src/: app.cpp  camera.cpp  descriptor.cpp  device.cpp  keyboard.cpp  model.cpp  pipeline.cpp  render.cpp  render_system.cpp  swap_chain.cpp  uniform_buffer.cpp  window.cpp
